# gmock_tutnotes

./: CMakeLists.txt
include/: dummy.hpp  foo.hpp  foo_if.hpp  mock_foo.hpp
src/: dummy.cpp  foo.cpp
test/: testDummy.cpp
